<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="664dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_min_id"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_mid_min_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_mid_min_id"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_mid_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="35dp"
        android:text="@string/button_mid_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_min_id" />

    <Button
        android:id="@+id/button_mid_id"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_mid_max_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="35dp"
        android:text="@string/button_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mid_min_id" />

    <Button
        android:id="@+id/button_mid_max_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_max_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="35dp"
        android:text="@string/button_mid_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mid_id" />

    <Button
        android:id="@+id/button_max_id"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_selection_info"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="52dp"
        android:text="@string/button_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mid_max_id" />

    <TextView
        android:id="@+id/text_selection_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:text="@string/text_information_selection"
        android:textAlignment="center"
        android:textColor="#0914E8"
        android:textSize="28sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>