<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6A2A2">

    <TextView
        android:id="@+id/textview_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="16sp"
        android:text="@string/name_main"
        android:textColor="#2548B3"
        android:textSize="38sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/button_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_selection_name"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_app_name" />

    <Button
        android:id="@+id/button_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_statistics_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_selection" />

    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bluetooth"
        app:layout_constraintBottom_toTopOf="@+id/textview_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>